fixed DialogRef on ChooseAvatarComponent and added new dialog for messages manipulating to MainChatComponent

--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -123,6 +123,10 @@
   clear: both;
 }
 
+.message-list-item_message {
+  cursor: pointer;
+}
+
 .message-list-item__avatar {
   position: absolute;
   bottom: 0;
