--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -8,7 +8,8 @@
       <div class="message-list-content">
 
         <div #messageListItem class="message-list-item" *ngFor="let message of messages"
-             [ngClass]="getClassOfMessageList(message, user)">
+             [ngClass]="getClassOfMessageList(message, user)" (click)="getMessageManipulatingComponent(message)"
+              [class.message-list-item_message]="message.action === 'sentMessage'">
 
           <p mat-line class="action-line" *ngIf="message.action === 'joined'">
             {{message.messageContent}}
