added editing option to main-chat-room

--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -160,6 +160,30 @@
   margin-top: 5px;
 }
 
+.edit-message__container {
+  position: relative;
+  left: 34px;
+  width: calc(100% - 34px);
+  border-left: 2px solid black;
+  margin-bottom: 5px;
+}
+
+.edit-message__content {
+  position: relative;
+  padding: 10px;
+}
+
+.edit-message__cancel-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+}
+
+.edit-message__header {
+  margin: 0 0 10px;
+}
+
 /*.avatar-block {*/
   /*position: absolute;*/
   /*bottom: 0;*/
