--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -43,6 +43,13 @@
     </div>
   </mat-card-content>
   <mat-card-footer class="main-chat-container-footer" #chat_room_footer>
+    <div class="edit-message__container" *ngIf="isMessageRequestEdit && currentMessageEdit">
+      <div class="edit-message__content">
+        <mat-icon class="edit-message__cancel-button" (click)="cancelEditMessage()">cancel</mat-icon>
+        <h4 class="edit-message__header">Edit message</h4>
+        <p class="edit-message__message">{{currentMessageEdit.messageContent}}</p>
+      </div>
+    </div>
     <mat-icon class="main-chat-container-footer__icon">create</mat-icon>
     <mat-form-field class="message-input" [floatLabel]="'never'">
       <mat-label>Type a message...</mat-label>
