added to class message edited field for using it in the chat room after editing message

--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -184,6 +184,10 @@
   margin: 0 0 10px;
 }
 
+.message-is-edited {
+  min-width: 70px;
+}
+
 /*.avatar-block {*/
   /*position: absolute;*/
   /*bottom: 0;*/
