--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,47 +1,50 @@
-<mat-card class="side-bar" [class.disable-side-bar]="isChatRoomActive">
-  <mat-card-header class="side-bar-header">
-    <img mat-card-avatar class="user-avatar" [src]="user?.avatar || ''">
-    <mat-card-title class="side-bar-title">{{user?.firstName}} {{user?.lastName}}</mat-card-title>
-    <mat-card-subtitle class="side-bar-item" routerLink="edit-profile" (click)="activeChatRoom()">
-      Edit Profile
-    </mat-card-subtitle>
-    <mat-card-subtitle class="side-bar-item" routerLink="/" (click)="exit()">Exit</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content class="rooms-container">
+<div class="chat-component">
+  <mat-card class="side-bar" [class.disable-side-bar]="isChatRoomActive">
+    <mat-card-header class="side-bar-header">
+      <img mat-card-avatar class="user-avatar" [src]="user?.avatar || ''">
+      <mat-card-title class="side-bar-title">{{user?.firstName}} {{user?.lastName}}</mat-card-title>
+      <mat-card-subtitle class="side-bar-item" routerLink="edit-profile" (click)="activeChatRoom()">
+        Edit Profile
+      </mat-card-subtitle>
+      <mat-card-subtitle class="side-bar-item" routerLink="/" (click)="exit()">Exit</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="rooms-container">
 
-    <div class="rooms-container-content">
-      <mat-card class="chat-item" *ngFor="let room of rooms"
-                [routerLink]="[(room?.type === 'chat')? room?.id : 'direct-messages-room']"
-                [queryParams]="getQueryParams(room)"
-                (click)="activeChatRoom()"
-                [class.chat-item__active]="isCurrentChatRoomActive(room.id)">
-        <mat-card-header class="chat-item__container">
-          <img mat-card-avatar class="chat-item-avatar" [src]="room?.avatar || ''">
-          <mat-card-title class="chat-item-title">{{room?.name}}</mat-card-title>
-          <mat-card-subtitle class="chat-item__last-message" *ngIf="!room.lastMessageFromCurrentUser || room.type === 'chat'">
-            {{room?.lastMessage}}
-          </mat-card-subtitle>
-          <mat-card-subtitle class="chat-item__last-message" *ngIf="room.lastMessageFromCurrentUser && room.type === 'direct'">
-            You: {{room?.lastMessage}}
-          </mat-card-subtitle>
-        </mat-card-header>
-      </mat-card>
-    </div>
+      <div class="rooms-container-content">
+        <mat-card class="chat-item" *ngFor="let room of rooms"
+                  [routerLink]="[(room?.type === 'chat')? room?.id : 'direct-messages-room']"
+                  [queryParams]="getQueryParams(room)"
+                  (click)="activeChatRoom()"
+                  [class.chat-item__active]="isCurrentChatRoomActive(room.id)">
+          <mat-card-header class="chat-item__container">
+            <img mat-card-avatar class="chat-item-avatar" [src]="room?.avatar || ''">
+            <mat-card-title class="chat-item-title">{{room?.name}}</mat-card-title>
+            <mat-card-subtitle class="chat-item__last-message" *ngIf="!room.lastMessageFromCurrentUser || room.type === 'chat'">
+              {{room?.lastMessage}}
+            </mat-card-subtitle>
+            <mat-card-subtitle class="chat-item__last-message" *ngIf="room.lastMessageFromCurrentUser && room.type === 'direct'">
+              You: {{room?.lastMessage}}
+            </mat-card-subtitle>
+          </mat-card-header>
+        </mat-card>
+      </div>
 
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
 
 
-<div class="chat-container"
-     [class.active-chat-room]="isMobile && isChatRoomActive"
-     [class.no-active-chat-room]="!isChatRoomActive">
-  <a (click)="redirectToChat()" *ngIf="isChatRoomActive" class="mobile_button-back"
-     [class.direct-room-button]="getDirectRoomButtonBack()"
-     [class.profile-button]="getProfileButtonBack()">
-    <mat-icon [class.profile-button]="getProfileButtonBack()">arrow_back</mat-icon>
-  </a>
-  <router-outlet></router-outlet>
-  <p *ngIf="!isChatRoomActive" class="no-active-chat-room__text">
-    Chat isn't selected. Click on "Main chat" to start chatting
-  </p>
+  <div class="chat-container"
+       [class.active-chat-room]="isMobile && isChatRoomActive"
+       [class.no-active-chat-room]="!isChatRoomActive">
+    <a (click)="redirectToChat()" *ngIf="isChatRoomActive" class="mobile_button-back"
+       [class.direct-room-button]="getDirectRoomButtonBack()"
+       [class.profile-button]="getProfileButtonBack()">
+      <mat-icon [class.profile-button]="getProfileButtonBack()">arrow_back</mat-icon>
+    </a>
+    <router-outlet></router-outlet>
+    <p *ngIf="!isChatRoomActive" class="no-active-chat-room__text">
+      Chat isn't selected. Click on "Main chat" to start chatting
+    </p>
+  </div>
+
 </div>
