--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -24,6 +24,12 @@
   display: block;
 }
 
+.chat-room-container__content, .chat-room-container-footer {
+  width: 90%;
+  margin: 0 auto;
+}
+
+
 .direct-messages-room__user-activity {
   color: white;
   font-size: 12px;
@@ -33,6 +39,7 @@
 .direct-messages-room__user-avatar {
   width: 40px;
   height: 40px;
+  margin-right: 15px;
 }
 
 .direct-messages-room__user-name {
@@ -57,7 +64,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  margin: 0 20px 10px 20px;
+  margin-bottom: 20px;
 }
 .mat-icon {
   vertical-align: middle;
