--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -47,7 +47,7 @@
 }
 
 .message-input {
-  width: calc(100% - 34px);
+  width: calc(100% - 34px - 70px);
 }
 
 .message-input textarea {
@@ -64,11 +64,25 @@
   position: absolute;
   left: 0;
   right: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
-.mat-icon {
+
+.chat-room-container-footer__icon {
   vertical-align: middle;
   margin-right: 10px;
+}
+
+.message-send-button {
+  position: absolute;
+  right: 25px;
+  top: 5px;
+  border: 0;
+  background: transparent;
+  outline: none;
+  color: #8d63ad;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
 }
 .action-line {
   text-align: center;
@@ -80,9 +94,9 @@
   overflow-y: auto;
   position: absolute;
   top: 15px;
-  left: 20px;
+  left: 0;
   bottom: 0;
-  right: 10px;
+  right: 10;
   visibility: hidden;
   display: flex;
   flex-direction: column;
