--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -58,6 +58,7 @@
       <textarea matInput mat-autosize (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent"
                 autofocus autocomplete="off" matAutosizeMinRows="2"></textarea>
     </mat-form-field>
+    <button (click)="sendMessage(messageContent)" class="message-send-button">SEND</button>
   </mat-card-footer>
 </mat-card>
 <mat-card class="main-chat-container" layot="column" *ngIf="!user.action.joined">
