--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -86,6 +86,15 @@
   word-break: break-word;
 }
 
+.message-from-current-user {
+  background-color: #0d061370;
+  color: white;
+}
+
+.message-from-current-user .message-item-time {
+  color: white;
+}
+
 .message-item:last-child {
   margin-bottom: 0;
 }
