added notification about editing user's name at the same time to all user's chat room from socket

--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -103,6 +103,10 @@
   flex-flow: column-reverse;
 }
 
+.message-list-item_message {
+  cursor: pointer;
+}
+
 .message-list-content, .message-list:hover {
   visibility: visible;
 }
@@ -120,6 +124,15 @@
   word-break: break-word;
   padding: 7px 10px 20px 10px;
   clear: both;
+}
+
+.message-list-item {
+  padding: 7px 10px 20px 10px;
+  clear: both;
+}
+
+.message-list-item__current-user {
+  float: right;
 }
 
 .message-from-current-user {
