put down send message button in the process of editing message, and added getting dialog for manipulating message in direct rooms only for mobile, for other device in process of creating

--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -84,6 +84,10 @@
   font-size: 15px;
   cursor: pointer;
 }
+
+.message-send-button.message-send-button__edit {
+  top: 75px;
+}
 .action-line {
   text-align: center;
   font-size: 15.5px;
