--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
@@ -50,6 +50,7 @@
       <textarea matInput mat-autosize (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent"
                 autofocus autocomplete="off" matAutosizeMinRows="2"></textarea>
     </mat-form-field>
-    <button (click)="sendMessage(messageContent)" class="message-send-button">SEND</button>
+    <button (click)="sendMessage(messageContent)" class="message-send-button"
+    [class.message-send-button__edit]="isMessageRequestEdit && currentMessageEdit">SEND</button>
   </mat-card-footer>
 </mat-card>
