added desktop version message manipulating to mainChatRoom component, added canceling manipulating after clicking on already selected message-item

--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -143,6 +143,10 @@
   background-color: #8d63ad!important;
 }
 
+.message-item__selected, .message-item__selected .message-item-time {
+  color: white;
+}
+
 .message-list-item__current-user {
   float: right;
 }
