--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -69,6 +69,22 @@
   flex-flow: column-reverse;
 }
 
+.message-list-item__wrapper {
+  margin-bottom: 15px;
+}
+
+.message-list-item__wraper-message {
+  cursor: pointer;
+}
+
+.message-list-item__wrapper:last-child {
+  margin-bottom: 0;
+}
+
+.message-list-item__wrapper-selected {
+  background-color: #8e62a921;
+}
+
 .message-list-content, .message-list:hover {
   visibility: visible;
 }
@@ -101,6 +117,7 @@
 
 .message-item__selected {
   background-color: #8d63ad!important;
+  position: relative;
 }
 
 .message-item__selected, .message-item__selected .message-item-time,
@@ -294,7 +311,7 @@
   list-style: none;
   margin: 0 auto;
   width: fit-content;
-  padding: 15px 10px;
+  padding: 16px 10px;
 }
 
 .manipulating-message-desktop__item {
