--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -7,39 +7,46 @@
 
       <div class="message-list-content">
 
-        <div #messageListItem class="message-list-item" *ngFor="let message of messages"
-              [ngClass]="getClassOfMessageList(message, user)" (click)="getMessageManipulatingComponent(message)"
-              [class.message-list-item_message]="message.action === 'sentMessage'"
-              [class.message-is-edited]="message.edited"
-              [class.message-from-current-user]="message.from.id === user.id && message.action === 'sentMessage'"
-              [class.message-item__selected]="message === messageSelectedForManipulatingDesktop">
+        <div *ngFor="let message of messages" class="message-list-item__wrapper"
+             [class.message-list-item__wrapper-selected]="message === messageSelectedForManipulatingDesktop"
+             (click)="getMessageManipulatingComponent(message)"
+              [class.message-list-item__wraper-message]="message.action === 'sentMessage'">
 
-          <p mat-line class="action-line" *ngIf="message.action === 'joined'">
-            {{message.messageContent}}
-          </p>
+          <div #messageListItem class="message-list-item"
+               [ngClass]="getClassOfMessageList(message, user)"
+               [class.message-list-item_message]="message.action === 'sentMessage'"
+               [class.message-is-edited]="message.edited"
+               [class.message-from-current-user]="message.from.id === user.id && message.action === 'sentMessage'"
+               [class.message-item__selected]="message === messageSelectedForManipulatingDesktop">
 
-          <p mat-line class="action-line" *ngIf="message.action === 'edit'">
-            {{message.messageContent}}
-          </p>
+            <p mat-line class="action-line" *ngIf="message.action === 'joined'">
+              {{message.messageContent}}
+            </p>
 
-          <img mat-card-avatar [src]="message.from.avatar"
-               *ngIf="message.action === 'sentMessage' && message.from.id !== user.id"
-               class="message-list-item__avatar" routerLink="../user-profile"
-               [queryParams]="{id: message.from.id}" (click)="activeChatRoom()">
+            <p mat-line class="action-line" *ngIf="message.action === 'edit'">
+              {{message.messageContent}}
+            </p>
+
+            <img mat-card-avatar [src]="message.from.avatar"
+                 *ngIf="message.action === 'sentMessage' && message.from.id !== user.id"
+                 class="message-list-item__avatar" routerLink="../user-profile"
+                 [queryParams]="{id: message.from.id}" (click)="activeChatRoom()">
 
 
-          <h3 mat-line class="message-item-user-name"
-              *ngIf="message.action === 'sentMessage' && message.from.id !== user.id" class="message-list-item-title">
-            {{message.from.firstName}} {{message.from.lastName}}
-          </h3>
+            <h3 mat-line class="message-item-user-name"
+                *ngIf="message.action === 'sentMessage' && message.from.id !== user.id" class="message-list-item-title">
+              {{message.from.firstName}} {{message.from.lastName}}
+            </h3>
 
-          <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
-            {{message.messageContent}}
-          </p>
+            <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
+              {{message.messageContent}}
+            </p>
 
-          <span class="message-item-time" *ngIf="message.action === 'sentMessage' && !message.edited">{{message.sendingTime | date: 'h:mma' | lowercase}}</span>
-          <span class="message-item-time" *ngIf="message.action === 'sentMessage' && message.edited">edited {{message.sendingTime | date: 'h:mma' | lowercase}}</span>
+            <span class="message-item-time" *ngIf="message.action === 'sentMessage' && !message.edited">{{message.sendingTime | date: 'h:mma' | lowercase}}</span>
+            <span class="message-item-time" *ngIf="message.action === 'sentMessage' && message.edited">edited {{message.sendingTime | date: 'h:mma' | lowercase}}</span>
 
+
+          </div>
         </div>
 
       </div>
@@ -66,12 +73,12 @@
               [class.message-send-button__edit]="isMessageRequestEdit && currentMessageEdit">SEND</button>
     </div>
 
-    <div *ngIf="isManipulatingMessageDesktop" class="manipulating-message-desktop">
+    <div *ngIf="isManipulatingMessageDesktop" class="manipulating-message-desktop" #manipulating_message_desktop>
       <ul class="manipulating-message-desktop__container">
         <li class="manipulating-message-desktop__item" (click)="copyMessage(messageSelectedForManipulatingDesktop)">Copy</li>
         <li class="manipulating-message-desktop__item" (click)="editMessage(messageSelectedForManipulatingDesktop)"
             *ngIf="messageSelectedForManipulatingDesktop.from.id === user.id">Edit</li>
-        <li class="manipulating-message-desktop__item" (click)="deleteMessage(messageSelectedForManipulatingDesktop, directMessagesRoomId)">Delete</li>
+        <li class="manipulating-message-desktop__item" (click)="deleteMessage(messageSelectedForManipulatingDesktop, 'main-chat')">Delete</li>
         <li (click)="cancelManipulatingMessageDesktop()"
             class="manipulating-message-desktop__item manipulating-message-desktop__cancel-button">CANCEL</li>
       </ul>
